add deleteRoom, edit remove configRoomBtn disable

--- a/src/main/resources/templates/chatroom.html
+++ b/src/main/resources/templates/chatroom.html
@@ -69,7 +69,7 @@
                 aria-haspopup="true" aria-expanded="false">
             참가한 유저
         </button>
-        <div id="list" class="dropdown-menu" aria-labelledby="showUserListButton">
+            <div id="list" class="dropdown-menu" aria-labelledby="showUserListButton">
 
         </div>
     </div>
@@ -88,6 +88,12 @@
                 <div class="input-group clearfix">
                     <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
                            class="form-control"/>
+                    <select class="target">
+                        <option class="target" value="all">모두</option>
+                        <option class="target" > </option>
+                        <option class="target"> </option>
+                        <option class="target"> </option>
+                    </select>
                     <button type="submit" class="primary">Send</button>
                 </div>
             </div>
