20230213 :: 귓속말 임시 커밋

--- a/src/main/resources/templates/chatroom.html
+++ b/src/main/resources/templates/chatroom.html
@@ -95,7 +95,7 @@
                 <div class="input-group clearfix">
                     <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
                            class="form-control"/>
-                    <select id="targetId" class="target">
+                    <select id="targetId" name="targetId" class="target">
 
                     </select>
                     <button type="submit" class="primary">Send</button>
