--- a/src/main/resources/templates/chatroom.html
+++ b/src/main/resources/templates/chatroom.html
@@ -57,6 +57,7 @@
         <h1 class="title">Type your username</h1>
         <form id="usernameForm" name="usernameForm">
             <div  th:if="${user == null}" class="form-group">
+                <input type="text" id="userId" placeholder="UserId" autocomplete="off" class="form-control"/>
                 <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control"/>
             </div>
             <div  th:if="${user != null}" class="form-group">
