--- a/src/main/resources/templates/roomlist.html
+++ b/src/main/resources/templates/roomlist.html
@@ -153,7 +153,8 @@
 
                     if(result){
                         if (chkRoomUserCnt(roomId)) {
-                            location.href = "/chat/room?roomId="+roomId;
+                            //location.href = "/chat/room?roomId="+roomId;
+                            location.href = "/chat/room"+roomId;
                         }
                     }else{
                         alert("비밀번호가 틀립니다. \n 비밀번호를 확인해주세요")
@@ -248,7 +249,8 @@
                     </td>
                     <td th:if="${!room.secretChk}">
                         <!-- thymeleaf 의 변수를 onclick 에 넣는 방법 -->
-                        <a th:href="@{/chat/room(roomId=${room.roomId})}" th:roomId="${room.roomId}" onclick="return chkRoomUserCnt(this.getAttribute('roomId'));">[[${room.roomName}]]</a>
+                        <!--<a th:href="@{/chat/room(roomId=${room.roomId})}" th:roomId="${room.roomId}" onclick="return chkRoomUserCnt(this.getAttribute('roomId'));">[[${room.roomName}]]</a>-->
+                        <a th:href="@{/chat/room/{roomId}(roomId=${room.roomId})}" th:roomId="${room.roomId}" onclick="return chkRoomUserCnt(this.getAttribute('roomId'));">[[${room.roomName}]]</a>
                     </td>
                     <td>
                         <span th:if="${room.secretChk}">
