--- a/src/main/resources/templates/chatroom.html
+++ b/src/main/resources/templates/chatroom.html
@@ -45,6 +45,22 @@
             width: 350px;
         }
     </style>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#enterChatRoom").click(function () {
+               let inputUserId = document.getElementById("userId");
+               let inputUserName = document.getElementById("name");
+               if(inputUserId.value.length == 0 || inputUserId.value.trim() == null) { // 입력 값이 없거나 null인 경우
+                   alert("아이디를 입력하세요.");
+                   return false;
+               } else if (inputUserName.value.length == 0 || inputUserName.value == null) {
+                   alert("닉네임을 입력하세요.");
+                   return false;
+               }
+               return true;
+            })
+        });
+    </script>
 </head>
 <body>
 <noscript>
@@ -64,7 +80,7 @@
                 <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" th:value="${user.nickName}"/>
             </div>
             <div class="form-group">
-                <button type="submit" class="accent username-submit">Start Chatting</button>
+                <button type="submit" id="enterChatRoom" class="accent username-submit">Start Chatting</button>
             </div>
         </form>
     </div>
