--- a/src/main/resources/templates/roomlist.html
+++ b/src/main/resources/templates/roomlist.html
@@ -229,11 +229,11 @@
 
         <h2>채팅방 리스트</h2>
 
-        <div th:if="${user == null}" class="row">
-            <div class="col">
-                <a href="/chatlogin"><button type="button" class="btn btn-primary">로그인하기</button></a>
-            </div>
-        </div>
+<!--        <div th:if="${user == null}" class="row">-->
+<!--            <div class="col">-->
+<!--                <a href="/chatlogin"><button type="button" class="btn btn-primary">로그인하기</button></a>-->
+<!--            </div>-->
+<!--        </div>-->
         <h5 th:if="${user != null}">
             [[${user.nickName}]]
         </h5>
