--- a/src/main/resources/templates/roomlist.html
+++ b/src/main/resources/templates/roomlist.html
@@ -283,7 +283,7 @@
                 <h5 class="modal-title">채팅방 생성</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form method="post" action="/chat/createroom" onsubmit="return createRoom()">
+            <form method="post" action="/chat/createRoom" onsubmit="return createRoom()">
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="roomName" class="col-form-label">방 이름</label>
